crates/fasti/tests/snapshots/contract__verb_add_created_series.snap
---
source: crates/fasti/tests/contract.rs
expression: pretty(&created)
---
{
  "created": {
    "core": "fasti",
    "home": "aof",
    "kind": "event",
    "series": "standups"
  }
}
