crates/fasti/tests/snapshots/contract__verb_add_event_fresh.snap
---
source: crates/fasti/tests/contract.rs
expression: pretty(&fresh)
---
{
  "core": "fasti",
  "data": {
    "until": "1700",
    "values": [
      "sprint review"
    ]
  },
  "home": "aof",
  "key": "20260719T1600",
  "kind": "event",
  "refs": [],
  "series": "standups"
}
