crates/fasti/tests/snapshots/contract__verb_add_event_overwrite_applied.snap
---
source: crates/fasti/tests/contract.rs
expression: pretty(&applied)
---
{
  "core": "fasti",
  "data": {
    "values": [
      "sprint retro"
    ]
  },
  "home": "aof",
  "key": "20260719T1600",
  "kind": "event",
  "refs": [],
  "series": "standups"
}
