crates/fasti/tests/snapshots/contract__verb_add_span_dry_run.snap
---
source: crates/fasti/tests/contract.rs
expression: pretty(&redact(plan))
---
{
  "change": {
    "after": {
      "core": "fasti",
      "data": {
        "from": "20260401"
      },
      "home": "aof",
      "kind": "span",
      "refs": [],
      "slug": "sabbatical"
    },
    "before": null,
    "core": "fasti",
    "home": "aof",
    "key": "sabbatical",
    "kind": "span",
    "verb": "add"
  },
  "plan": "add",
  "token": "[redacted]"
}
