crates/fasti/tests/snapshots/contract__verb_add_span_fresh.snap
---
source: crates/fasti/tests/contract.rs
expression: pretty(&fresh)
---
{
  "core": "fasti",
  "data": {
    "from": "20260101"
  },
  "home": "aof",
  "kind": "span",
  "refs": [],
  "slug": "mvp_phase"
}
