crates/fasti/tests/snapshots/contract__verb_add_span_overwrite_applied.snap
---
source: crates/fasti/tests/contract.rs
expression: pretty(&applied)
---
{
  "core": "fasti",
  "data": {
    "from": "20260101",
    "to": "20260901"
  },
  "home": "aof",
  "kind": "span",
  "refs": [],
  "slug": "mvp_phase"
}
