crates/fasti/tests/snapshots/contract__verb_add_span_overwrite_pending.snap
---
source: crates/fasti/tests/contract.rs
expression: pretty(&redact(pending))
---
{
  "change": {
    "after": {
      "core": "fasti",
      "data": {
        "from": "20260101",
        "to": "20260901"
      },
      "home": "aof",
      "kind": "span",
      "refs": [],
      "slug": "mvp_phase"
    },
    "before": {
      "core": "fasti",
      "data": {
        "from": "20260101"
      },
      "home": "aof",
      "kind": "span",
      "refs": [],
      "slug": "mvp_phase"
    },
    "core": "fasti",
    "home": "aof",
    "key": "mvp_phase",
    "kind": "span",
    "verb": "add"
  },
  "plan": "add",
  "token": "[redacted]"
}
