crates/fasti/tests/snapshots/contract__verb_edit_event.snap
---
source: crates/fasti/tests/contract.rs
expression: pretty(&edited)
---
{
  "core": "fasti",
  "data": {
    "values": [
      "kickoff moved"
    ]
  },
  "home": "aof",
  "key": "20260719",
  "kind": "event",
  "refs": [],
  "series": "standups"
}
