crates/fasti/tests/snapshots/contract__verb_edit_span_close.snap
---
source: crates/fasti/tests/contract.rs
expression: pretty(&closed)
---
{
  "core": "fasti",
  "data": {
    "from": "20240301",
    "to": "20260630"
  },
  "home": "aof",
  "kind": "span",
  "refs": [],
  "slug": "employment"
}
