crates/fasti/tests/snapshots/contract__verb_move_span.snap
---
source: crates/fasti/tests/contract.rs
expression: pretty(&moved)
---
{
  "moved": {
    "from": "aof",
    "to": "aoa"
  },
  "record": {
    "core": "fasti",
    "data": {
      "from": "20260401"
    },
    "home": "aoa",
    "kind": "span",
    "refs": [],
    "slug": "sabbatical"
  }
}
