crates/fasti/tests/snapshots/contract__verb_rename_event_series.snap
---
source: crates/fasti/tests/contract.rs
expression: pretty(&renamed)
---
{
  "cascade": [],
  "record": {
    "core": "fasti",
    "home": "aof",
    "kind": "event",
    "series": "dailies"
  },
  "renamed": {
    "from": "standups",
    "to": "dailies"
  }
}
